--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -128,12 +128,12 @@
 	}
 }
 
-.discord-cta {
+.social-media-cta {
 	display: flex;
+	width: 100%;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	border-radius: 5px;
 	padding: .85em;
 	cursor: pointer;
 
