--- a/src/app/emotes/emote/emote.component.html
+++ b/src/app/emotes/emote/emote.component.html
@@ -11,7 +11,10 @@
 				<mat-spinner [diameter]="16" *ngSwitchCase="true"></mat-spinner>
 			</div>
 			
-			<span class="ml-2"> {{emote?.getName() | async}} </span>
+			<div>
+				<span class="ml-2"> {{emote?.getName() | async}} </span>
+				<span class="text-muted channel-alias" matTooltip="Channel Alias"> {{(getAliasName() | async)}} </span>
+			</div>
 
 			<!-- Rename Button -->
 			<button mat-icon-button (click)="rename()" *ngIf="emote?.canEdit(clientService) | async" matTooltip="Rename">
@@ -24,7 +27,7 @@
 			</button>
 
 			<!-- Set Alias Button -->
-			<button mat-icon-button matTooltip="Set Alias (Coming soon)" [disabled]="true">
+			<button mat-icon-button (click)="setAlias()" matTooltip="Set Alias" color="primary">
 				<mat-icon>label</mat-icon>
 			</button>
 
