Home (Chatterino Dialog) - add nightly icon

--- a/src/app/home/chatterino-dialog/chatterino-dialog.component.html
+++ b/src/app/home/chatterino-dialog/chatterino-dialog.component.html
@@ -16,7 +16,11 @@
 				<div class="menu-trigger" *ngIf="p.menu" [matMenuTriggerFor]="p.menu">
 					<div class="trigger"></div>
 				</div>
-				<mat-icon [style.transform]="'scale(4)'" [svgIcon]="p.icon"></mat-icon>
+
+				<div [ngSwitch]="p.svgIcon">
+					<mat-icon *ngSwitchCase="true" [style.transform]="'scale(4)'" [svgIcon]="p.icon"></mat-icon>
+					<mat-icon *ngSwitchDefault [style.transform]="'scale(4)'"> {{p.icon}} </mat-icon>
+				</div>
 			</div>
 		</div>
 	</div>
