--- a/src/app/home/chatterino-dialog/chatterino-dialog.component.scss
+++ b/src/app/home/chatterino-dialog/chatterino-dialog.component.scss
@@ -16,11 +16,12 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			flex-wrap: wrap;
 
 			.platform-icon {
 				cursor: pointer;
 				color: white;
-				margin-top: 3em;
+				margin-top: 6em;
 				margin-right: 4em;
 				margin-left: 4em;
 				height: 100%;
