--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -29,6 +29,12 @@
 		margin-left: 2em;
 		margin-right: 2em;
 		margin-bottom: 1em;
+
+		&.disabled {
+			cursor: not-allowed;
+			pointer-events: none;
+			color: grey;
+		}
 	}
 
 	.tag {
