Emote List - auto-resize, delayed loader

--- a/src/app/emotes/emote-list/emote-list.component.scss
+++ b/src/app/emotes/emote-list/emote-list.component.scss
@@ -2,7 +2,6 @@
 
 .emote-list {
     display: flex;
-	height: 100%;
 	
 	.emotes-list {
 		display: flex;
@@ -24,4 +23,8 @@
 	.protip {
 		font-size: .69em;
 	}
+}
+
+.emotes-container {
+	height: calc(100vh - 240px);
 }
