--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -15,20 +15,22 @@
 			</span>
 
 			<!-- List Emote Cards -->
-			<div #emotesContainer class="d-flex flex-fill align-items-center" [@emotes]="emotes | async" [appColor]="themingService.bg.lighten(.18)" [isBackground]="true">
-				<div class="w-100 d-flex justify-content-center" *ngIf="(isEmpty() | async) && !(loading | async)">
-					<h3>There is nothing here</h3>
-				</div>
+			<div #emotesContainer class="emotes-container d-flex align-items-center" [@emotes]="emotes | async" [appColor]="themingService.bg.lighten(.18)" [isBackground]="true">
+				<div class="d-flex flex-fill">
+					<div class="w-100 d-flex justify-content-center" *ngIf="(isEmpty() | async) && !(loading | async)">
+						<h3>There is nothing here</h3>
+					</div>
 
-				<div class="w-100 d-flex justify-content-center" *ngIf="loading | async">
-					<mat-spinner [diameter]="184"></mat-spinner>
-				</div>
+					<div class="w-100 d-flex justify-content-center" *ngIf="loading | async">
+						<mat-spinner [diameter]="184"></mat-spinner>
+					</div>
 
-				<div class="d-flex flex-wrap justify-content-center">
-					<div (click)="selectEmote(emoteEl, emote)"  #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
-						<app-emote-card [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="onOpenCardContextMenu($event)">
-			
-						</app-emote-card>
+					<div class="d-flex flex-wrap justify-content-center">
+						<div (click)="selectEmote(emoteEl, emote)"  #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
+							<app-emote-card [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="onOpenCardContextMenu($event)">
+				
+							</app-emote-card>
+						</div>
 					</div>
 				</div>
 			</div>
