Store - update banner

--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -9,13 +9,13 @@
 		<div class="store-heading">
 			<div class="store-heading-content">
 				<p>Become a 7TV Suscriber!</p>
-				<span>Get some cool cosmetic perks and support the development</span>
+				<span>Get some cool cosmetic perks and support the developers</span>
 			</div>
 		</div>
 		<div class="store-heading-gradient" #gradient></div>
 	</div>
 
-	<div>
-		Coming soon
+	<div class="store-content">
+		<app-store-subscribe></app-store-subscribe>
 	</div>
 </div>
