AuditLog - add lidl changes list

--- a/src/app/admin/audit-log-entry/audit-log-entry.component.html
+++ b/src/app/admin/audit-log-entry/audit-log-entry.component.html
@@ -15,7 +15,12 @@
 		<div class="audit-changes">
 			<h4>Changes</h4>
 			
-			
+			<div class="audit-change" *ngFor="let change of entry?.getChanges() | async">
+				<span>{{ change.key }}</span>
+				<span> {{change.getOldValue()}} </span>
+				->
+				<span> {{change.getNewValue()}} </span>
+			</div>
 		</div>
 	</mat-expansion-panel>
 </div>
