Implement emote slots & fix userpage performance

--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -1,10 +1,10 @@
 <div class="user-home">
 	<!-- User's Channel Emotes -->
 	<div class="heading" [appColor]="themingService.primary.darken(.075)" [isBackground]="true">
-		Emotes Enabled ({{(channelEmotes | async)?.length || 0}}/200)
+		Emotes Enabled ({{channelEmotes.length || 0}}/{{(user | async)?.getEmoteSlots() | async}})
 	</div>
 	<div class="channel-emote-list" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
-		<div class="is-emote-card" *ngFor="let emote of channelEmotes | async">
+		<div class="is-emote-card" *ngFor="let emote of channelEmotes; trackBy: trackBy">
 			<app-emote-card [blur]="isBlurred(emote)" [routerLink]="['/emotes', emote.getID()]" [size]="8" [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="contextMenu.contextEmote = $event"></app-emote-card>
 		</div>
 	</div>
@@ -13,10 +13,10 @@
 
 	<!-- User's Uploaded Emotes -->
 	<div class="heading" [appColor]="themingService.primary.darken(.075)" [isBackground]="true">
-		Emotes by {{(user | async)?.getUsername() | async}} ({{(ownedEmotes | async)?.length || 0}})
+		Emotes by {{(user | async)?.getUsername() | async}} ({{ownedEmotes.length || 0}})
 	</div>
 	<div class="channel-emote-list" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
-		<div class="is-emote-card" *ngFor="let emote of ownedEmotes | async">
+		<div class="is-emote-card" *ngFor="let emote of ownedEmotes; trackBy: trackBy">
 			<app-emote-card [blur]="isBlurred(emote)" [routerLink]="['/emotes', emote.getID()]" [size]="8" [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="contextMenu.contextEmote = $event"></app-emote-card>
 		</div>
 	</div>
