New version test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 	<app-navigation></app-navigation>
 	<div class="app-content">
 		<div [style.height]="viewportService.getContentHeight('viewport')">
+			<h1 class="text-success">This is the new version</h1>
 			<router-outlet></router-outlet>
 		</div>
 	</div>
