Test stage cache

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,7 @@
 			</div>
 
 			<span class="my-1"></span>
+			<span>Test</span>
 
 			<!-- Display Brwowser Downloads -->
 			<p class="d-flex align-items-center">
