--- a/src/app/user/user-home/user-home.component.scss
+++ b/src/app/user/user-home/user-home.component.scss
@@ -1,3 +1,19 @@
+.user-heading {
+	padding: .5em;
+	
+	.live-indicators {
+		display: flex;
+		justify-content: space-evenly;
+		flex-direction: row;
+		align-items: center;
+		width: 100%;
+	
+		.inline-indicator {
+			display: flex;
+			align-items: center;
+		}
+	}
+}
 
 .heading {
 	display: flex;
