User Role Editing (#39)
* App - parse roles from meta

* DataService - `getAll()` method

* User Role Dialog

* Add audit entry text for 'user edited'

* Send request to API on role change

* Fix role color updates

* Hide roles that client can't access

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -18,7 +18,9 @@
                     <!-- User's Role, if any -->
                     <div class="user-role" [style.color]="(user | async)?.getColor() | async">
                         <div [appColor]="themingService.bg.darken(.1)" [isBackground]="true">
-                            <span>{{ ((user | async)?.getRole() | async)?.getName() | async }}</span>
+                            <span [class.editable]="canChangeRole() | async" (click)="changeRole()">
+                                {{ ((user | async)?.getRole() | async)?.getName() | async }}
+                            </span>
                         </div>
                     </div>
                 </div>
