--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -51,6 +51,10 @@
                         display: flex;
                         font-size: .65rem;
                         padding: .75em;
+
+                        &.editable {
+                            cursor: pointer;
+                        }
                     }
 
                     div {
