--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -63,6 +63,10 @@
 			</button>
 		</div>
 
+		<div class="d-flex mr-2" *ngIf="clientService.isAuthenticated() | async">
+			<app-notify-button (click)="openNotifyMenu()" matTooltip="Notifications"></app-notify-button>
+		</div>
+
 		<div class="d-flex mr-2" *ngIf="clientService.isAnEditor() | async" [ngSwitch]="clientService.isImpersonating">
 			<button mat-icon-button matTooltip="Swap Editor Channel" (click)="impersonate()" *ngSwitchCase="false">
 				<mat-icon>swap_vert</mat-icon>
