--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -5,6 +5,10 @@
     overflow: hidden;
 }
 
+.elevation {
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 0px 0px rgb(0 0 0 / 14%), 0px 1px 0px 0px rgb(0 0 0 / 12%);
+}
+
 .heading {
     display: flex;
     flex-direction: column;
@@ -13,7 +17,6 @@
         display: flex;
         flex-direction: column;
         width: 250px;
-        min-height: 160px;
         border-radius: 4px;
 
         .user-who {
@@ -42,7 +45,7 @@
                     width: 100%;
                 }
 
-                .user-role {
+                .user-details {
                     display: inline-flex;
                     justify-content: flex-end;
                     width: 100%;
@@ -57,19 +60,38 @@
                         }
                     }
 
+                    .user-role {
+                        height: min-content;
+                        min-width: 2em;
+                        text-align: center;
+                    }
+
+                    .user-buttons {
+                        display: flex;
+                        flex-wrap: wrap;
+                        flex-grow: 1;
+                        flex-direction: row;
+                        justify-content: start;
+                        align-items: flex-start;
+                        height: 5em;
+                        margin-top: .5em;
+                        margin-left: .5em;
+
+                        .user-button {
+                            cursor: pointer;
+                            display: flex;
+                            margin-right: .25em;
+                            margin-left: .25em;
+                            height: 24px;
+                            width: 24px;
+                        }
+                    }
+
                     div {
                         border-bottom-left-radius: 8px;
                     }
                 }
             }
-        }
-
-        .social-links {
-            display: flex;
-            flex-grow: 1;
-            padding: .25em;
-            align-self: flex-end;
-            align-items: flex-end;
         }
     }
 
